i am trying to add a nav bar

--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,111 @@
-h1 {color: rgb(150, 173, 221)
-    ;} 
+body {
+
+    margin: 0px;
+    display: flex;
+    background-color: rgb(207, 216, 229);
+    background: linear-gradient(110deg, rgb(207, 216, 229) 60%, rgb(99, 103, 150) 60%);
+}
+
+#main_container {
+    width: 1024px;
+    height: 500px;
+    margin: 0px auto;
+    border: 1px solid rgb(174, 190, 213);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#nav_box {
+    width: 1024px;
+    height: 77px;
+    border: 1px solid rgb(137, 165, 205);
+    margin-top: 100px;
+    .topnav {
+      background-color: #CFD8E5;
+      overflow: hidden;
+    }
+    
+    
+    .topnav a {
+      float: left;
+      display: block;
+      color: #f2f2f2;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+    }
+    
+    
+    .topnav a:hover {
+      background-color: #ddd;
+      color: #CFD8E5;
+    }
+    
+    /* Add an active class to highlight the current page */
+    .topnav a.active {
+      background-color: #CFD8E5;
+      color: white;
+    }
+    
+    
+    .topnav .icon {
+      display: none;
+    }
+    @media screen and (max-width: 600px) {
+      .topnav a:not(:first-child) {display: none;}
+      .topnav a.icon {
+        float: right;
+        display: block;
+      }
+    }
+    
+   
+    @media screen and (max-width: 600px) {
+      .topnav.responsive {position: relative;}
+      .topnav.responsive a.icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+      }
+      .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+      }
+    }
+    function myFunction() {
+      var x = document.getElementById("myTopnav");
+      if (x.className === "topnav") {
+        x.className += " responsive";
+      } else {
+        x.className = "topnav";
+      }
+    }
+}
+
+
+#header {
+    width: 1024px;
+    height: 225px;
+    background-color: rgb(174, 190, 213);
+    border-style: dotted;
+  border-width: thick;
+  border-color: rgb(99, 103, 150);
+  img {margin: auto; display: block}
+}
+
+#about_me {
+    width: 1024px;
+    height: 223px;
+    border: 1px solid rgb(137, 165, 205);
+    margin-top: 100px
+    width: 100%;
+    background-color: rgb(198, 212, 229);
+}
+
+
+h1 { 
+    color: rgb(44, 52, 69);
+} 
